force-app/main/default/objects/Study_Template_Form_Question__c/Study_Template_Form_Question__c.object-meta.xml
<CustomObject>
    <label>Study Template Form Question</label>
    <nameField>
        <displayFormat>STFQ-{0000}</displayFormat>
        <label>Study Template Form Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Template Form Question</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>