force-app/main/default/objects/Study_Template_Form_Question__c/fields/Is_DIN__c.field-meta.xml
<CustomField>
    <fullName>Is_DIN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is DIN</label>
    <type>Checkbox</type>
</CustomField>