force-app/main/default/objects/Study_Template_Form_Question__c/fields/Is_Subject__c.field-meta.xml
<CustomField>
    <fullName>Is_Subject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subject</label>
    <type>Checkbox</type>
</CustomField>