force-app/main/default/objects/Study_Template_Form_Question__c/fields/isManufacturingStatus__c.field-meta.xml
<CustomField>
    <fullName>isManufacturingStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isManufacturingStatus</label>
    <type>Checkbox</type>
</CustomField>