force-app/main/default/objects/Study_Template_Form_Question__c/fields/Study_Template_Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Study_Template_Form_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Template Form Section</label>
    <referenceTo>Study_Template_Form_Section__c</referenceTo>
    <relationshipLabel>Study Template Form Question</relationshipLabel>
    <relationshipName>Study_Template_Form_Question</relationshipName>
    <type>Lookup</type>
</CustomField>