force-app/main/default/objects/Study_Template_Form_Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Study_Template_Form_Section__c</columns>
    <columns>Picklist_Values__c</columns>
    <columns>Order__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>